# llm-os-shell

./: README.md  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
llm-os-shell/: LICENSE  README.md  pyproject.toml
llm-os-shell/.github/workflows/: ci.yml
llm-os-shell/examples/: config_example.toml  dangerous_commands.sh
llm-os-shell/src/llm_os_shell/: __init__.py  __main__.py  cli.py  config.py  display.py  executor.py  llm_backend.py  logger.py  risk.py  shell.py
llm-os-shell/src/llm_os_shell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm-os-shell/tests/: test_config.py  test_executor.py  test_llm_backend.py  test_logger.py  test_risk.py  test_shell.py
